refactor: replace `Arrays.asList()` with `List.of()`